--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
 
+    <!-- Strings related to welcome -->
+    <string name="activity_welcome">Welcome</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
